Actualiza DTOs y repositorios para mejorar la documentación y optimizar consultas